# B.Sc_ros2JoyToCAN

./: .gitignore  LICENSE  README.md
matlab/: cableRobot.slx  controlLoop.mlx  kinematics.mlx  marginallyCleverPolargraph.ino  pathPlanning.asv  pathPlanning.m  pathPlanningV2.asv  pathPlanningV2.m  semiCircle.m  trajectoryGenerator.slx  trajectoryGenerator.slx.original  trajectoryPlotting.m  xC.csv  yC.csv
matlab/calculations/: decodingPathPlanner.m  maxAngleCalculation.m  pcb_calculations.m
matlab/calculations/trajectoryGeneration/: Quintic.m  fk.mlx  ik.m  ik_testing.m  malerobot_V2.slxc  q1_q2_pos_rqt.csv  q1_q2_pos_rqt_2.csv  (+8 more)
matlab/simulink_simulation/: malinSimulation.slx  params_malerobot.m
matlab/trajectoryGeneration/: ik.m  t_vect.mat  trajectoryGeneration.asv  trajectoryGeneration.m  xpos.mat  xvel.mat  zvel.mat
matlab/trajectory_test-master/: main.m
src/joy2can/: CMakeLists.txt  package.xml
src/joy2can/launch/: joy2can.launch.py
src/joy2can/scripts/: app.py  cmd_id_enums.py  default.json  joySubscriber.py  motor.py  motorSetpointSub.py  odriveCAN.py  odriveNode.py  plotter.py
src/joy2can/scripts/templates/: control.html  index.html
src/joy2can/scripts/templates/static/: main.js
src/joy2can/scripts/templates/static/css/: bootstrap.css
src/joy2can/scripts/templates/static/css/placeholder/: custom.css  custom.css.map  custom.scss
src/joy2can/src/: canbus.cpp  canbus.h  ik.cpp  ik.h  kinematics.cpp  kinematicsCalculations.cpp  kinematicsCalculations.h  quintic.cpp  quintic.h  trajectoryPlanner.cpp  trajectoryPlanner.h  tranceiver.cpp
(+189 files in other folders)
